<resources>
    <string name="app_name">Inventory King</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stock_in">Stock In</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="delivery">Delivery</string>
    <string name="transfer">Transfer</string>
    <string name="add_delivery">Add delivery</string>
    <string name="add_transfer">Add transfer</string>
    <string name="title_activity_delivery">Delivery</string>
    <string name="delivered_by">Delivered by</string>
    <string name="reference">Reference No.</string>
    <string name="location">Location</string>
    <string name="select_time">Time</string>
    <string name="select_date">Date</string>
    <string name="save">Save</string>

    <string name="Datepickerdialog" translatable="false">Datepickerdialog</string>
    <string name="Timepickerdialog" translatable="false">Timepickerdialog</string>
    <string name="delivery_receipt">Delivery receipt:</string>
    <string name="add_location"><u>Add location</u></string>
    <string name="cancel">Cancel</string>
    <string name="location_succes_header">Successfully added location!</string>
    <string name="location_succes_message">Your saved location is now available at the location list.</string>
    <string name="dont_show_message">Do not show this message again.</string>
    <string name="location_failed_header">Failed to add location!</string>
    <string name="location_failed_message">Please try again.</string>
    <string name="required_field">This field is required.</string>

    <string name="title_activity_transfer">Transfer</string>
    <string name="trans_id">Transfer ID</string>
    <string name="from_location">From location</string>
    <string name="to_location">To location</string>
    <string name="title_activity_stock_out">Stock Out</string>
    <string name="sales">Sales</string>
    <string name="title_activity_sales">Sales</string>
    <string name="customer">Customer</string>
    <string name="sales_receipt">Sales receipt</string>
    <string name="title_activity_product">Products</string>
    <string name="title_activity_new_product">New Product</string>
    <string name="prod_code">Product code</string>
    <string name="barcode">Barcode</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="qty">Quantity</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="item_image">Item image</string>
    <string name="low_stock">Notify low stock</string>
    <string name="notes">Notes</string>
    <string name="title_activity_new_items">Add items</string>
    <string name="scan">Scan</string>
    <string name="item">Item</string>
    <string name="delivery_details">Delivery details</string>
    <string name="add">Add</string>
    <string name="add_image">add image</string>
    <string name="edit_item">Edit items</string>
    <string name="delete_item">delete item</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sales_details">Sales Details</string>
    <string name="title_activity_stock_take">Stock Take</string>
    <string name="search_item">Search item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_list">Items</string>
    <string name="items">Items</string>
    <string name="add_item">Add items</string>
    <string name="title_activity_setup">Setup</string>
    <string name="title_activity_location">Locations</string>
    <string name="title_activity_unit">Units</string>
    <string name="action_filter">filter</string>
    <string name="action_search">search</string>
    <string name="search_results">Search Results</string>
    <string name="built_in_scanner">Built-in Scanner</string>
    <string name="bluetooth_scanner">Bluetooth Scanner</string>
    <string name="manual_add">Add Manually</string>
    <string name="image_details">Image Details</string>
    <string name="scan_items">Scan Items</string>
</resources>
