<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_manual"
        android:orderInCategory="100"
        android:title="@string/manual_add"
        android:icon="@drawable/ic_action_edit" />

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="200"
        android:title="@string/built_in_scanner"
        android:icon="@drawable/ic_action_settings_overscan" />

    <item
        android:id="@+id/action_bluetooth_scan"
        android:orderInCategory="300"
        android:title="@string/bluetooth_scanner"
        android:icon="@drawable/ic_action_bluetooth" />
</menu>