<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.miji.com.inventorycheck.activity.NewItemsActivity">
    <item
        android:id="@+id/action_details"
        android:orderInCategory="100"
        android:title="@string/image_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan"
        android:orderInCategory="200"
        android:title="@string/scan_items"
        android:icon="@drawable/ic_action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="300"
        android:title="@string/save"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save"/>
</menu>
