<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_cardview_margin"
    android:orientation="vertical"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_item_image_height"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/item_image"
            android:scaleType="fitXY"
            android:src="@drawable/image_placeholder" />


        <TextView
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:hint="@string/item"
            android:paddingTop="@dimen/cardview_top_bottom_margin"
            android:textAppearance="?android:textAppearanceLarge" />


        <TextView
            android:id="@+id/txt_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:hint="@string/qty"
            android:textAppearance="?android:textAppearanceMedium" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/edit_item"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/img_edit"
                android:layout_toEndOf="@+id/img_edit"
                android:padding="8dp"
                android:tint="@android:color/darker_gray"
                app:srcCompat="@android:drawable/ic_delete"
                android:contentDescription="@string/delete_item"/>

        </RelativeLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>