<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_delivery"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="app.miji.com.inventorycheck.fragment.SalesFragment"
    tools:showIn="@layout/activity_sales">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/save"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_done" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/fragment_form_margin"
            android:paddingRight="@dimen/fragment_form_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="@dimen/text_margin"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_date"
                    android:inputType="date" />

                <ImageButton
                    android:id="@+id/btn_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/txt_date"
                    android:layout_toEndOf="@+id/txt_date"
                    android:layout_toRightOf="@+id/txt_date"
                    android:contentDescription="@string/mdtp_select_day"
                    android:src="@drawable/ic_action_event" />

                <EditText
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/btn_date"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:layout_toEndOf="@+id/btn_date"
                    android:layout_toRightOf="@+id/btn_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_time" />

                <ImageButton
                    android:id="@+id/btn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/txt_time"
                    android:layout_toEndOf="@+id/txt_time"
                    android:layout_toRightOf="@+id/txt_time"
                    android:contentDescription="@string/mdtp_time"
                    android:src="@drawable/ic_action_time" />

            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_delivery_name"
                style="@style/CustomTextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/txt_trans_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer"
                    android:inputType="textAutoComplete" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_ref"
                style="@style/CustomTextInputLayout"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/txt_reference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/reference"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/material_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                app:met_floatingLabel="highlight" />


            <TextView
                android:id="@+id/txt_add_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_location"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorAccent_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/sales_receipt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <app.miji.com.inventorycheck.widget.PlaceholderImageView
                android:id="@+id/img_receipt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/image_placeholder" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
