<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_item_image_height"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_image"
        android:scaleType="fitXY"
        android:layout_marginEnd="@dimen/dialog_text_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:layout_marginRight="@dimen/dialog_text_margin"
        android:layout_marginStart="@dimen/dialog_text_margin"
        android:layout_marginTop="@dimen/dialog_text_margin"
        android:src="@drawable/image_placeholder" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dialog_text_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:layout_marginRight="@dimen/dialog_text_margin"
        android:layout_marginStart="@dimen/dialog_text_margin"
        android:layout_marginTop="@dimen/dialog_text_margin"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/spinner_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_text_height"
            android:hint="@string/item" />


    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_text_marginBottom"
        android:layout_marginEnd="@dimen/dialog_text_margin"
        android:layout_marginLeft="@dimen/dialog_text_margin"
        android:layout_marginRight="@dimen/dialog_text_margin"
        android:layout_marginStart="@dimen/dialog_text_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_qty"
            android:layout_width="@dimen/qty_width"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/txt_qty"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_text_height"
                android:hint="@string/qty"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/input_qty"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <AutoCompleteTextView
                android:id="@+id/spinner_unit"
                android:layout_width="@dimen/unit_width"
                android:layout_height="@dimen/dialog_text_height"
                android:completionThreshold="1"
                android:hint="@string/unit" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>


</LinearLayout>